@@ -3,10 +3,11 @@
 2. Important!! ($dom->save_file) will not support anymore.
 3. New node type "comment" (eg. $dom->find('comment')).
 4. Add self-closing tags: 'base', 'spacer'.
+5. Fix the bug of outertext (th).
 5. Fix the bug of regular expression escaping chars ($dom->find).
-6. Fix the bug of line-kreaker and "\t" in tags.
+6. Fix the bug while line-breaker and "\t" in tags.
 7. Remove example "example_customize_parser.php".
-8. New example "example_utility.php".
+8. New example "simple_html_dom_utility.php".
 
 [PHP Simple HTML DOM Parser v0.96 is released]
 1. (Request #1936000) New DOM operations(first_child, last_child, next_sibling, previous_sibling).
